--- a/app.json
+++ b/app.json
@@ -12,13 +12,14 @@
     "logo": "",
     "dependencies": [],
     "screenshots": [],
-    "platform": "1.0.0.0",
-    "application": "18.0.0.0",
+    "platform": "19.0.0.0",
+    "application": "19.0.0.0",
     "idRanges": [{
         "from": 50100,
         "to": 50149
     }],
     "contextSensitiveHelpUrl": "https://RentalCars.com/help/",
     "showMyCode": true,
-    "runtime": "7.1"
+    "runtime": "7.1",
+    "target": "Cloud"
 }
